removed numerous FindBugs warnings