@@ -329,12 +329,12 @@ public class BookmarkAction extends Command
 		}
 
 		this.context.put("bookmarks", bookmarks);
-		this.context.put("forumType", new Integer(BookmarkType.FORUM));
-		this.context.put("userType", new Integer(BookmarkType.USER));
-		this.context.put("topicType", new Integer(BookmarkType.TOPIC));
+		this.context.put("forumType", Integer.valueOf(BookmarkType.FORUM));
+		this.context.put("userType", Integer.valueOf(BookmarkType.USER));
+		this.context.put("topicType", Integer.valueOf(BookmarkType.TOPIC));
 		User u = DataAccessDriver.getInstance().newUserDAO().selectById(userId);
 		this.context.put("user", u);
-		this.context.put("loggedUserId", new Integer(SessionFacade.getUserSession().getUserId()));
+		this.context.put("loggedUserId", Integer.valueOf(SessionFacade.getUserSession().getUserId()));
 		this.context.put("pageTitle", I18n.getMessage("Bookmarks.for")+" "+u.getUsername());
 		this.context.put("fr", new ForumRepository());
 	}
